--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     console.log("Hello World!")
   </script> -->
 
-  <!-- <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     function createUniversalLink() {
     }
@@ -91,7 +91,7 @@
     }
 
     async function main() {
-      alert("LINE Developers x Skooldio")
+      // alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1657621928-GkMBgr1O" })
       getEnvironment()
       // getUserProfile()
