--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     }
 
     async function getUserProfile() {
+      const profile = await liff.getProfile()
+      document.getElementById("pictureUrl").append(liff.pictureUrl())
+      document.getElementById("userId").append(liff.userId())
+      document.getElementById("displayName").append(liff.displayName())
+      document.getElementById("statusMessage").append(liff.statusMessage())
     }
 
     function getEnvironment() {
@@ -94,7 +99,7 @@
       // alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1657621928-GkMBgr1O" })
       getEnvironment()
-      // getUserProfile()
+      getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
