--- a/path/index.html
+++ b/path/index.html
@@ -35,9 +35,10 @@
       if (liff.isLoggedIn()) {
         getUserProfile()
       } else {
-        liff.login()
+        liff.login({ redirectUrl: "https://sakchai9999.github.io/liff/path"})
       }
     }
+    main()
   </script>
   
 </body>
